--- a/puzzling-logic/index.html
+++ b/puzzling-logic/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!--Pcb-board icons created by madness - Flaticon -->
+    <link rel="icon" type="image/png" href="/src/assets/pcb-board.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Puzzling Logic</title>
   </head>
