--- a/puzzling-logic/index.html
+++ b/puzzling-logic/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="content-type" content="text/html" charset="UTF-8" />
     <!--Pcb-board icons created by madness - Flaticon -->
     <link rel="icon" type="image/png" href="/src/assets/pcb-board.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
